--- a/cursoADVweb/package.json
+++ b/cursoADVweb/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "bootstrap": "^5.3.2",
     "ngx-cookie-service": "^17.0.1",
+    "ngx-editor": "^17.0.2",
+    "ngx-mask": "^16.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
