--- a/cursoADVweb/package.json
+++ b/cursoADVweb/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.2.0",
     "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.1.0",
     "@angular/common": "^17.1.0",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.2",
     "ngx-cookie-service": "^17.0.1",
     "ngx-editor": "^17.0.2",
