--- a/cursoADVweb/package.json
+++ b/cursoADVweb/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "^17.1.0",
     "@angular/forms": "^17.1.0",
     "@angular/material": "^17.1.0",
+    "@angular/material-moment-adapter": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
     "ngx-cookie-service": "^17.0.1",
     "ngx-editor": "^17.0.2",
     "ngx-mask": "^16.4.2",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
