--- a/cursoADVweb/package.json
+++ b/cursoADVweb/package.json
@@ -26,6 +26,7 @@
     "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-cookie-service": "^17.0.1",
     "ngx-editor": "^17.0.2",
     "ngx-mask": "^16.4.2",
